[gd_scene load_steps=4 format=2]

[ext_resource path="res://scenes/Menu.gd" type="Script" id=1]
[ext_resource path="res://ui/kenneyUI.tres" type="Theme" id=2]
[ext_resource path="res://ui/yowc0t47rkj71.jpg" type="Texture" id=3]

[node name="Menu" type="Control"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -800.0
margin_top = -600.0
theme = ExtResource( 2 )
script = ExtResource( 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = 10.0
margin_top = 404.0
margin_right = 114.0
margin_bottom = 589.0

[node name="Yowc0T47Rkj71" type="Sprite" parent="VBoxContainer"]
position = Vector2( 284.115, -104.857 )
rotation = 0.0415858
scale = Vector2( 0.584838, 0.491346 )
texture = ExtResource( 3 )

[node name="Start" type="Button" parent="VBoxContainer"]
margin_right = 112.0
margin_bottom = 42.251
text = "Start"

[node name="Option" type="Button" parent="VBoxContainer"]
margin_top = 46.0
margin_right = 112.0
margin_bottom = 88.251
text = "Options"

[node name="Authors" type="Button" parent="VBoxContainer"]
margin_top = 92.0
margin_right = 112.324
margin_bottom = 134.251
text = "Authors"

[node name="Quit" type="Button" parent="VBoxContainer"]
margin_top = 138.0
margin_right = 112.0
margin_bottom = 180.251
text = "Quit"

[connection signal="pressed" from="VBoxContainer/Start" to="." method="_on_Start_pressed"]
[connection signal="pressed" from="VBoxContainer/Authors" to="." method="_on_Authors_pressed"]
[connection signal="pressed" from="VBoxContainer/Quit" to="." method="_on_Quit_pressed"]
